force-app/main/default/objects/hierarchy__c/hierarchy__c.object-meta.xml
<CustomObject>
    <label>hierarchy</label>
    <nameField>
        <label>hierarchy name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>hierarchys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>