force-app/main/default/objects/hierarchy__c/fields/Account_id__c.field-meta.xml
<CustomField>
    <fullName>Account_id__c</fullName>
    <label>Account id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>