force-app/main/default/objects/hierarchy__c/fields/billing_id__c.field-meta.xml
<CustomField>
    <fullName>billing_id__c</fullName>
    <label>billing id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>