force-app/main/default/objects/hierarchy__c/fields/BTN_Phone__c.field-meta.xml
<CustomField>
    <fullName>BTN_Phone__c</fullName>
    <label>BTN Phone</label>
    <type>Phone</type>
</CustomField>