force-app/main/default/objects/hierarchy__c/fields/CLLI__c.field-meta.xml
<CustomField>
    <fullName>CLLI__c</fullName>
    <label>CLLI</label>
    <length>20</length>
    <type>Text</type>
</CustomField>