force-app/main/default/objects/hierarchy__c/fields/GAN__c.field-meta.xml
<CustomField>
    <fullName>GAN__c</fullName>
    <label>GAN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>