force-app/main/default/objects/hierarchy__c/fields/Location_Id__c.field-meta.xml
<CustomField>
    <fullName>Location_Id__c</fullName>
    <label>Location Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>