force-app/main/default/objects/hierarchy__c/fields/Summary_Id__c.field-meta.xml
<CustomField>
    <fullName>Summary_Id__c</fullName>
    <label>Summary Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>