force-app/main/default/objects/hierarchy__c/fields/Summary_master_phone__c.field-meta.xml
<CustomField>
    <fullName>Summary_master_phone__c</fullName>
    <label>Summary master phone</label>
    <type>Phone</type>
</CustomField>