force-app/main/default/objects/hierarchy__c/fields/WTN__c.field-meta.xml
<CustomField>
    <fullName>WTN__c</fullName>
    <label>WTN</label>
    <type>Phone</type>
</CustomField>