force-app/main/default/objects/hierarchy__c/fields/WTN_ID__c.field-meta.xml
<CustomField>
    <fullName>WTN_ID__c</fullName>
    <label>WTN ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>